# Particle_Sim_Projet

./: .dockerignore  .gitignore  CMakeLists.txt  DEMO_README.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker_manager.sh  run_demo.sh
build_native/: minimal_test.cpp  simple_test.cpp
docs/: architecture.md  docker_guide.md  performance_analysis.md
src/: main.cpp
src/particle/: Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h
src/physics/: PhysicsEngine.cpp  PhysicsEngine.h
src/rendering/: Renderer.cpp  Renderer.h
src/utils/: JSONExporter.cpp  JSONExporter.h  PerformanceProfiler.cpp  PerformanceProfiler.h
